# yapluka

./: License  README.md
yapluka/: CMakeLists.txt  category.cpp  category.h  list_category.cpp  list_category.h  list_task.cpp  list_task.h  main.cpp  task.cpp  task.h  task_dialog.cpp  task_dialog.h  yapluka_fr_FR.ts  yaplukawindow.cpp  yaplukawindow.h  yaplukawindow.ui
